tests/ui/inference/issue-71584.stderr
error[E0284]: type annotations needed
  --> $DIR/issue-71584.rs:5:11
   |
LL |     d = d % n.into();
   |           ^ cannot infer type
   |
   = note: cannot satisfy `<u64 as Rem<_>>::Output == u64`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0284`.
